<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_follow_no_data"
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_no_data"
            />

        <!--邀请按钮-->
        <RelativeLayout
            android:id="@+id/rl_follow_confirm"
            android:layout_width="@dimen/offset_300dp"
            android:layout_height="@dimen/offset_60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/icon_login_btn_bg"
            >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow_invite"
                android:textColor="@color/white"
                android:textSize="@dimen/size_middle"
                android:layout_marginBottom="@dimen/offset_4dp"
                />
            </RelativeLayout>

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_invite_tip"
            android:textSize="@dimen/size_minor"
            />



    </LinearLayout>



</merge>