<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_mine_edit_bb_contain"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/light_blue"
    >


    <include
        layout="@layout/include_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/line_recent_contact"
        android:orientation="vertical"
        >

        <!--头像-->
        <RelativeLayout
            android:id="@+id/rl_mine_edit_bb_user_pic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/offset_55dp"
            android:background="@color/white"
            android:layout_marginTop="@dimen/offset_4dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_edit_user_img"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/offset_10dp"
                android:textSize="@dimen/font_size_16sp"
                />


            <com.nepo.fevercat.common.widget.circular.CircularImage
                android:id="@+id/iv_mine_edit_bb_user_pic"
                android:layout_width="@dimen/offset_45dp"
                android:layout_height="@dimen/offset_45dp"
                android:background="@drawable/icon_no_login_default"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/offset_10dp"
                />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/offset_0.5dp"
            android:background="@color/view_line" />
        <!--昵称-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/offset_55dp"
            android:background="@color/white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_edit_user_nick_name"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/offset_10dp"
                android:textSize="@dimen/font_size_16sp"
                />


            <EditText
                android:id="@+id/edt_mine_edit_user_nick_name"
                android:layout_width="@dimen/offset_150dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:hint="@string/mine_edit_user_nick_name_hint"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:paddingRight="@dimen/offset_4dp"
                android:textSize="@dimen/font_size_14sp"
                android:layout_marginRight="@dimen/offset_10dp"
                />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/offset_0.5dp"
            android:background="@color/view_line" />

        <!--性别-->
        <RelativeLayout
            android:id="@+id/rl_mine_edit_bb_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/offset_55dp"
            android:background="@color/white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_edit_bb_gender"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/offset_10dp"
                android:textSize="@dimen/font_size_16sp"
                />


            <TextView
                android:id="@+id/tv_mine_edit_bb_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/iv_mine_edit_bb_gender_arrow"
                android:text="@string/choice"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/offset_10dp"
                />



            <ImageView
                android:id="@+id/iv_mine_edit_bb_gender_arrow"
                android:layout_width="@dimen/offset_15dp"
                android:layout_height="@dimen/offset_15dp"
                android:background="@drawable/icon_arrow_down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/offset_10dp"
                />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/offset_0.5dp"
            android:background="@color/view_line" />

        <!--出省年月-->
        <RelativeLayout
            android:id="@+id/rl_mine_edit_bb_birth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/offset_55dp"
            android:background="@color/white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_edit_bb_birth"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/offset_10dp"
                android:textSize="@dimen/font_size_16sp"
                />


            <TextView
                android:id="@+id/tv_mine_edit_bb_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/iv_mine_edit_bb_birth_arrow"
                android:text="@string/choice"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/offset_10dp"
                />



            <ImageView
                android:id="@+id/iv_mine_edit_bb_birth_arrow"
                android:layout_width="@dimen/offset_15dp"
                android:layout_height="@dimen/offset_15dp"
                android:background="@drawable/icon_arrow_down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/offset_10dp"
                />


        </RelativeLayout>



        <!--保存-->
        <RelativeLayout
            android:id="@+id/rl_mine_edit_bb_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/offset_55dp"
            android:background="@color/white"
            android:layout_marginTop="@dimen/offset_10dp"
            android:clickable="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_centerInParent="true"
                android:textColor="@color/color_02"
                android:textSize="@dimen/font_size_16sp"
                />

        </RelativeLayout>

        <!--删除-->
        <RelativeLayout
            android:id="@+id/rl_mine_edit_bb_del"
            android:layout_width="match_parent"
            android:layout_height="@dimen/offset_55dp"
            android:background="@color/white"
            android:layout_marginTop="@dimen/offset_10dp"
            android:clickable="true"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del"
                android:layout_centerInParent="true"
                android:textColor="@color/color_07"
                android:textSize="@dimen/font_size_16sp"
                />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>